--- a/dashboard.html
+++ b/dashboard.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Dashboard</title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         body {
-            font-family: 'Redressed', cursive;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
@@ -13,6 +14,20 @@
         h1 {
             text-align: center;
             margin-top: 30px;
+            color: #34495e;
+        }
+
+        .total-box {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .total-box span {
+            background-color: #2c3e50;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 10px;
+            font-size: 20px;
         }
 
         .charts-container {
@@ -26,22 +41,48 @@
         .plotly-graph-div {
             margin: 0 auto;
         }
+
+        .export-buttons {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .export-buttons button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 8px;
+            color: white;
+            cursor: pointer;
+            margin: 0 10px;
+        }
+
+        .excel-btn {
+            background-color: #2980b9;
+        }
+
+        .pdf-btn {
+            background-color: #c0392b;
+        }
     </style>
 </head>
 <body>
     <h1>Dashboard</h1>
+
+    <div class="total-box">
+        <span>🎓 Total des étudiants : {{ total_etudiants }}</span>
+    </div>
 
     <div class="charts-container">
         <div>{{ graph1|safe }}</div>
         <div>{{ graph2|safe }}</div>
     </div>
 
-    <div style="text-align: center; margin-bottom: 20px;">
+    <div class="export-buttons">
         <a href="{{ url_for('export_excel') }}">
-            <button style="padding: 10px 20px; background-color: #2980b9; color: white; border: none; border-radius: 8px;">📥 Exporter Excel</button>
+            <button class="excel-btn">📥 Exporter Excel</button>
         </a>
         <a href="{{ url_for('export_pdf') }}">
-            <button style="padding: 10px 20px; background-color: #c0392b; color: white; border: none; border-radius: 8px; margin-left: 10px;">📄 Exporter PDF</button>
+            <button class="pdf-btn">📄 Exporter PDF</button>
         </a>
     </div>
 </body>
